# priv_eye_v3

./: .env.example  .gitignore  .gitleaks.toml  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  security.yml
agent/: README.md  pyproject.toml
agent/priveye_agent/: __init__.py  cli.py  recon.py  transport.py
agent/tests/: test_recon.py  test_transport.py
api/: Dockerfile  pyproject.toml
api/priveye_api/: __init__.py  main.py  schemas.py
api/priveye_api/core/: audit.py  auth.py  config.py  db.py  models.py  security.py
api/priveye_api/ml/: features.py  infer.py  model_meta.json  train.py
api/priveye_api/routers/: auth.py  health.py  hosts.py  insights.py  scans.py
api/tests/: conftest.py  test_auth.py  test_health.py  test_ml.py
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/static/: app.js  style.css
dashboard/templates/: dashboard.html  login.html
docs/: ARCHITECTURE.md  CONTROLS.md  DEPLOYMENT.md  THREAT_MODEL.md
scripts/: train_model.py
