[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "priveye-agent"
version = "0.3.0"
description = "Priv-Eye host-posture collection agent (Linux)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aditya Singh" }]
dependencies = [
    "httpx==0.27.2",
    "typer==0.12.5",
    "rich==13.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.0",
    "mypy==1.12.0",
    "bandit==1.7.10",
]

[project.scripts]
priveye-agent = "priveye_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["priveye_agent"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "N", "UP", "SIM"]
ignore = ["S603"]  # subprocess - we DO want to run subprocess, carefully

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SIM117"]  # assert + nested with are fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
