[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "priveye-api"
version = "0.1.0"
description = "Priv-Eye API — ML-backed Linux privilege posture scoring"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aditya Singh" }]

# Pinned — vuln scans run in CI against this set.
dependencies = [
    "fastapi==0.128.8",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "email-validator==2.2.0",
    "pydantic-settings==2.6.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "argon2-cffi==23.1.0",
    "pyjwt==2.12.1",
    "python-multipart==0.0.26",
    "slowapi==0.1.9",
    "httpx==0.28.1",
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "joblib==1.4.2",
    "jinja2==3.1.6",
    "starlette==0.49.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "bandit==1.7.10",
    "pip-audit==2.7.3",
    "types-requests",
]
insights = [
    "google-genai==1.9.0",
]

# Tell setuptools to only package priveye_api — ignore alembic/ in the flat layout.
[tool.setuptools.packages.find]
include = ["priveye_api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "N"]
ignore = ["S101"]  # assert is fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S106", "S105"]  # hardcoded test secrets

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

# Explicit strict flags — equivalent to strict=true except we drop:
# - disallow_subclassing_any (pydantic BaseSettings, sqlalchemy DeclarativeBase)
# - warn_return_any / no-any-return (jwt, argon2, sqlalchemy return Any internally)
# - disallow_untyped_decorators (slowapi @limiter.limit has no stubs)
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["joblib", "joblib.*", "sklearn.*", "pandas", "pandas.*", "numpy", "numpy.*", "google.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic_settings", "pydantic_settings.*", "sqlalchemy.*", "slowapi.*", "jwt.*", "argon2.*", "alembic.*", "aiosqlite.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["priveye_api.core.auth", "priveye_api.core.config", "priveye_api.core.db", "priveye_api.routers.auth", "priveye_api.routers.scans"]
disallow_any_return = false
disable_error_codes = ["misc", "no-any-return"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]